@@ -1,6 +1,6 @@
 # System hooks
 
-Your GitLab instance can perform HTTP POST requests on the following events: `project_create`, `project_destroy`, `user_add_to_team`, `user_remove_from_team`, `user_create`, `user_destroy`, `key_create`, `key_destroy`, `group_create`, `group_destroy`, `user_add_to_group` and `user_remove_from_group`.
+Your GitLab instance can perform HTTP POST requests on the following events: `project_create`, `project_destroy`, `project_rename`, `project_transfer`, `user_add_to_team`, `user_remove_from_team`, `user_create`, `user_destroy`, `key_create`, `key_destroy`, `group_create`, `group_destroy`, `user_add_to_group` and `user_remove_from_group`.
 
 System hooks can be used, e.g. for logging or changing information in a LDAP server.
 
@@ -17,6 +17,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
           "created_at": "2012-07-21T07:30:54Z",
+          "updated_at": "2012-07-21T07:38:22Z",
           "event_name": "project_create",
                 "name": "StoreCloud",
          "owner_email": "johnsmith@gmail.com",
@@ -33,6 +34,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
           "created_at": "2012-07-21T07:30:58Z",
+          "updated_at": "2012-07-21T07:38:22Z",
           "event_name": "project_destroy",
                 "name": "Underscore",
          "owner_email": "johnsmith@gmail.com",
@@ -44,11 +46,48 @@ X-Gitlab-Event: System Hook
 }
 ```
 
+**Project renamed:**
+
+```json
+{
+               "created_at": "2012-07-21T07:30:58Z",
+               "updated_at": "2012-07-21T07:38:22Z",
+               "event_name": "project_rename",
+                     "name": "Underscore",
+                     "path": "underscore",
+      "path_with_namespace": "jsmith/underscore",
+               "project_id": 73,
+               "owner_name": "John Smith",
+              "owner_email": "johnsmith@gmail.com",
+       "project_visibility": "internal",
+  "old_path_with_namespace": "jsmith/overscore",
+}
+```
+
+**Project transferred:**
+
+```json
+{
+               "created_at": "2012-07-21T07:30:58Z",
+               "updated_at": "2012-07-21T07:38:22Z",
+               "event_name": "project_transfer",
+                     "name": "Underscore",
+                     "path": "underscore",
+      "path_with_namespace": "scores/underscore",
+               "project_id": 73,
+               "owner_name": "John Smith",
+              "owner_email": "johnsmith@gmail.com",
+       "project_visibility": "internal",
+  "old_path_with_namespace": "jsmith/overscore",
+}
+```
+
 **New Team Member:**
 
 ```json
 {
                   "created_at": "2012-07-21T07:30:56Z",
+                  "updated_at": "2012-07-21T07:38:22Z",
                   "event_name": "user_add_to_team",
               "project_access": "Master",
                   "project_id": 74,
@@ -67,6 +106,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
                   "created_at": "2012-07-21T07:30:56Z",
+                  "updated_at": "2012-07-21T07:38:22Z",
                   "event_name": "user_remove_from_team",
               "project_access": "Master",
                   "project_id": 74,
@@ -85,6 +125,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
    "created_at": "2012-07-21T07:44:07Z",
+   "updated_at": "2012-07-21T07:38:22Z",
         "email": "js@gitlabhq.com",
    "event_name": "user_create",
          "name": "John Smith",
@@ -97,6 +138,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
    "created_at": "2012-07-21T07:44:07Z",
+   "updated_at": "2012-07-21T07:38:22Z",
         "email": "js@gitlabhq.com",
    "event_name": "user_destroy",
          "name": "John Smith",
@@ -110,6 +152,7 @@ X-Gitlab-Event: System Hook
 {
     "event_name": "key_create",
     "created_at": "2014-08-18 18:45:16 UTC",
+    "updated_at": "2012-07-21T07:38:22Z",
       "username": "root",
            "key": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC58FwqHUbebw2SdT7SP4FxZ0w+lAO/erhy2ylhlcW/tZ3GY3mBu9VeeiSGoGz8hCx80Zrz+aQv28xfFfKlC8XQFpCWwsnWnQqO2Lv9bS8V1fIHgMxOHIt5Vs+9CAWGCCvUOAurjsUDoE2ALIXLDMKnJxcxD13XjWdK54j6ZXDB4syLF0C2PnAQSVY9X7MfCYwtuFmhQhKaBussAXpaVMRHltie3UYSBUUuZaB3J4cg/7TxlmxcNd+ppPRIpSZAB0NI6aOnqoBCpimscO/VpQRJMVLr3XiSYeT6HBiDXWHnIVPfQc03OGcaFqOit6p8lYKMaP/iUQLm+pgpZqrXZ9vB john@localhost",
            "id": 4
@@ -122,6 +165,7 @@ X-Gitlab-Event: System Hook
 {
     "event_name": "key_destroy",
     "created_at": "2014-08-18 18:45:16 UTC",
+    "updated_at": "2012-07-21T07:38:22Z",
       "username": "root",
            "key": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC58FwqHUbebw2SdT7SP4FxZ0w+lAO/erhy2ylhlcW/tZ3GY3mBu9VeeiSGoGz8hCx80Zrz+aQv28xfFfKlC8XQFpCWwsnWnQqO2Lv9bS8V1fIHgMxOHIt5Vs+9CAWGCCvUOAurjsUDoE2ALIXLDMKnJxcxD13XjWdK54j6ZXDB4syLF0C2PnAQSVY9X7MfCYwtuFmhQhKaBussAXpaVMRHltie3UYSBUUuZaB3J4cg/7TxlmxcNd+ppPRIpSZAB0NI6aOnqoBCpimscO/VpQRJMVLr3XiSYeT6HBiDXWHnIVPfQc03OGcaFqOit6p8lYKMaP/iUQLm+pgpZqrXZ9vB john@localhost",
             "id": 4
@@ -133,6 +177,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
    "created_at": "2012-07-21T07:30:54Z",
+   "updated_at": "2012-07-21T07:38:22Z",
    "event_name": "group_create",
          "name": "StoreCloud",
   "owner_email": "johnsmith@gmail.com",
@@ -147,6 +192,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
    "created_at": "2012-07-21T07:30:54Z",
+   "updated_at": "2012-07-21T07:38:22Z",
    "event_name": "group_destroy",
          "name": "StoreCloud",
   "owner_email": "johnsmith@gmail.com",
@@ -161,6 +207,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
     "created_at": "2012-07-21T07:30:56Z",
+    "updated_at": "2012-07-21T07:38:22Z",
     "event_name": "user_add_to_group",
   "group_access": "Master",
       "group_id": 78,
@@ -176,6 +223,7 @@ X-Gitlab-Event: System Hook
 ```json
 {
     "created_at": "2012-07-21T07:30:56Z",
+    "updated_at": "2012-07-21T07:38:22Z",
     "event_name": "user_remove_from_group",
   "group_access": "Master",
       "group_id": 78,
